// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer should set dataset state when dispatching setDataset 1`] = `
Object {
  "dataset": "foobar",
}
`;

exports[`Reducer should set dataset, foo state when dispatching atlasRouter/ADDRESSES 1`] = `
Object {
  "dataset": "bag",
  "foo": "bar",
}
`;

exports[`Reducer should set dataset, view state when dispatching atlasRouter/CADASTRAL_OBJECTS 1`] = `
Object {
  "dataset": "brk",
  "view": "TABLE",
}
`;

exports[`Reducer should set dataset, view state when dispatching atlasRouter/ESTABLISHMENTS 1`] = `
Object {
  "dataset": "hr",
  "view": "TABLE",
}
`;

exports[`Reducer should set geometryFilter state when dispatching setGeometryFilter 1`] = `
Object {
  "geometryFilter": Array [
    Object {
      "filter": "foo",
    },
  ],
}
`;

exports[`Reducer should set isLoading, authError, errorMessage, dataset, results, markers state when dispatching receiveDataSelectionFailure 1`] = `
Object {
  "authError": false,
  "dataset": undefined,
  "errorMessage": "error message",
  "isLoading": false,
  "markers": Array [],
  "results": Object {},
}
`;

exports[`Reducer should set isLoading, markers state when dispatching fetchDataSelection 1`] = `
Object {
  "isLoading": true,
  "markers": Array [],
}
`;

exports[`Reducer should set isLoading, markers, errorMessage, authError, data state when dispatching receiveDataSelectionSuccess 1`] = `
Object {
  "authError": false,
  "data": Object {
    "some": "data",
  },
  "errorMessage": "",
  "isLoading": false,
  "markers": Array [],
}
`;

exports[`Reducer should set markers, isLoading state when dispatching setMarkers 1`] = `
Object {
  "isLoading": false,
  "markers": Array [
    Object {
      "markers": Array [],
    },
  ],
}
`;

exports[`Reducer should set page state when dispatching setPage 1`] = `
Object {
  "page": 1,
}
`;

exports[`Reducer should set view state when dispatching setView 1`] = `
Object {
  "view": "map",
}
`;
